<resources>
    <string name="app_name">商城1.0</string>
    <string name="app_browser_name">通用浏览器</string>

    <string name="mysql_url">http://192.168.1.107:8000/</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="menu_news">动态</string>
    <string name="menu_cart">购物车</string>
    <string name="menu_shopping">购物</string>
    <string name="menu_profile">我的</string>

    <string name="menu_notifications">通知</string>
    <string name="menu_issues">问题</string>
    <string name="menu_starred">收藏</string>
    <string name="menu_record">购物记录</string>
    <string name="menu_settings">设置</string>
    <string name="menu_about">关于</string>

    <string name="about_copyright">© %1$s JinChenZhe All rights reserved.</string>
    <string name="about_item_homepage">访问官网</string>
    <string name="about_item_author_github">关于作者</string>
    <string name="about_item_donation_link">捐赠作者</string>

    <string name="lab_yes">是</string>
    <string name="lab_no">否</string>
    <string name="lab_open_third_app">是否允许页面打开第三方应用?</string>

    <!-- 隐私政策弹窗   -->
    <string name="lab_exit_app">退出应用</string>
    <string name="lab_agree">同意</string>
    <string name="lab_disagree">不同意</string>
    <string name="lab_look_again">再次查看</string>
    <string name="lab_still_disagree">仍不同意</string>
    <string name="title_reminder">温馨提示</string>
    <string name="content_think_about_it_again">要不要再想想</string>
    <string name="content_privacy_explain_again">我们非常重视对你个人信息的保护，承诺严格按照《隐私权政策》保护及处理你的信息。如果你不同意该政策，很遗憾我们将无法为你提供服务</string>
    <string name="lab_privacy_name">《隐私权政策》</string>

    <!-- 登录   -->
    <string name="title_login_register">登录</string>
    <string name="action_get_verify_code">获取验证码</string>
    <string name="title_login">登录</string>
    <string name="title_login_by_verify_code">验证码登录</string>
    <string name="title_register">注册</string>
    <string name="lab_forget_password">忘记密码?</string>
    <string name="lab_login_by_verify_code">验证码登录</string>
    <string name="lab_login_by_password">密码登录</string>
    <string name="tip_please_input_phone_number">请输入手机号或员工ID</string>
    <string name="title_phone_number">手机号码</string>
    <string name="title_password">密码</string>
    <string name="title_old_password">旧密码</string>
    <string name="hint_please_input_verify_code">请输入验证码</string>
    <string name="lab_verify_code">验证码</string>
    <string name="tip_password_error">密码必须是8~18位字母和数字的组合！</string>
    <string name="tip_new_password_error">新密码必须是8~18位字母和数字的组合！</string>
    <string name="tip_phone_number_error">无效的手机号！</string>
    <string name="regex_phone_number">^(0?)((13[0-9])|(14[5,7])|(15[0-3,5-9])|(16[6])|(17[0,1,3,5-8])|(18[0-9])|(19[8,9]))\\d{8}$</string>
    <string name="tip_verify_code_error">请输入6位数验证码</string>
    <string name="regex_verify_code">^\\d{6}$</string>
    <string name="regex_password">^(?:(?=.*[a-zA-Z])(?=.*[0-9])).{8,18}$</string>
    <string name="title_forget_password">重置密码</string>
    <string name="lab_register_account">点击注册即表示同意</string>
    <string name="lab_service_protocol"><![CDATA[<用户协议>]]></string>
    <string name="lab_logout_confirm">是否确认退出账号？</string>
    <string name="title_jump_login">跳过</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="beg_off_text">你今天未请假\n再次点击确认请假，请勿反复点击</string>
    <string name="begged_off_text">你今天已请假\n再次点击取消请假，请勿反复点击</string>


</resources>