<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        style="@style/TextStyle.Title"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:text="    "
        android:textSize="30sp" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center_horizontal"
        app:srcCompat="@mipmap/ic_launcher" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:tint="?attr/colorAccent"
                app:srcCompat="@drawable/ic_phone" />

            <com.xuexiang.xui.widget.edittext.materialedittext.MaterialEditText
                android:id="@+id/phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:hint="@string/tip_please_input_phone_number"
                android:inputType="number"
                app:met_clearButton="true"
                app:met_errorMessage="@string/tip_phone_number_error"
                app:met_floatingLabel="normal"
                app:met_floatingLabelText="@string/title_phone_number"
                app:met_regexp="@string/regex_phone_number" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:tint="?attr/colorAccent"
                app:srcCompat="@drawable/ic_phone" />

            <com.xuexiang.xui.widget.edittext.materialedittext.MaterialEditText
                android:id="@+id/email_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:hint="请输入邮箱号"
                app:met_clearButton="true"
                app:met_errorMessage="无效的邮箱号"
                app:met_floatingLabel="normal"
                app:met_floatingLabelText="邮箱号码"
                app:met_regexp="([a-zA-Z0-9_]*)@(((126|163|qq|hotmail).com)|(fudan.edu.cn))" />

            <com.xuexiang.xui.widget.button.roundbutton.RoundButton
                android:id="@+id/btn_get_verify_code"
                style="@style/RoundButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:paddingStart="10dp"
                android:paddingTop="3dp"
                android:paddingEnd="10dp"
                android:paddingBottom="3dp"
                android:enabled="true"
                android:text="@string/action_get_verify_code"
                android:textColor="@color/selector_round_button_main_theme_color"
                android:textSize="13sp"
                app:rb_borderColor="@color/selector_round_button_main_theme_color"
                app:rb_borderWidth="1.5dp"
                app:rb_radius="15dp" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:tint="?attr/colorAccent"
                app:srcCompat="@drawable/ic_password" />

            <com.xuexiang.xui.widget.edittext.materialedittext.MaterialEditText
                android:id="@+id/verify_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:hint="@string/hint_please_input_verify_code"
                android:inputType="number"
                app:met_clearButton="false"
                app:met_errorMessage="@string/tip_verify_code_error"
                app:met_floatingLabel="normal"
                app:met_floatingLabelText="@string/lab_verify_code"
                app:met_maxCharacters="6"
                app:met_regexp="@string/regex_verify_code" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:tint="?attr/colorAccent"
                app:srcCompat="@drawable/ic_password" />

            <com.xuexiang.xui.widget.edittext.materialedittext.MaterialEditText
                android:id="@+id/fst_password_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:hint="请输入密码"
                app:met_clearButton="false"
                app:met_errorMessage="请输入符合要求的密码"
                app:met_floatingLabel="normal"
                app:met_floatingLabelText="密码"
                app:met_maxCharacters="20"/>

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:tint="?attr/colorAccent"
                app:srcCompat="@drawable/ic_password" />

            <com.xuexiang.xui.widget.edittext.materialedittext.MaterialEditText
                android:id="@+id/sec_password_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:hint="请输入密码"
                app:met_clearButton="false"
                app:met_errorMessage="请输入符合要求的密码"
                app:met_floatingLabel="normal"
                app:met_floatingLabelText="密码"
                app:met_maxCharacters="20"/>

        </FrameLayout>


    </LinearLayout>

    <com.xuexiang.xui.widget.textview.supertextview.SuperButton
        android:id="@+id/btn_login"
        style="@style/SuperButton.Primary.Login"
        android:layout_marginTop="16dp"
        android:text="确认" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="20dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                style="@style/TextStyle.Explain"
                android:layout_width="wrap_content"
                android:text="确认代表您已阅读并同意"
                android:textColor="@color/xui_config_color_primary_text" />

            <com.xuexiang.xui.widget.alpha.XUIAlphaTextView
                android:id="@+id/tv_user_protocol"
                style="@style/TextStyle.Explain"
                android:layout_width="wrap_content"
                android:text="用户协议"
                android:textColor="?attr/colorAccent" />

            <TextView
                style="@style/TextStyle.Explain"
                android:layout_width="wrap_content"
                android:text="和"
                android:textColor="@color/xui_config_color_primary_text" />

            <com.xuexiang.xui.widget.alpha.XUIAlphaTextView
                android:id="@+id/tv_privacy_protocol"
                style="@style/TextStyle.Explain"
                android:layout_width="wrap_content"
                android:text="隐私政策"
                android:textColor="?attr/colorAccent" />

        </LinearLayout>

    </FrameLayout>


</LinearLayout>